--- a/home.html
+++ b/home.html
@@ -20,8 +20,9 @@
 	<body>
 	
 		<!-- Header : menu principal, bannière, menu client, barre sociale.
-		Mes problèmes : "resserrer" les éléments des menus, respecter les dimensions de la maquette.
-		La bannière reste très éloignée du menu principal sans que je ne sache pourquoi. -->
+		Problème : "resserrer" les éléments des menus.
+		J'ai réussi à rapprocher la bannière du menu principal et à globalement respecter les dimensions de la maquette, mais en bidouillant.
+		Je pense qu'il y a plus "propre" comme méthode. -->
 		
 		
 		<header id="header">
