--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 	
 	<head>
 	
-		<title>Create Pro - The professionnal, ready-to-go solution to your everyday web needs.</title>
+		<title>Create Pro - The professionnal, ready-to-go solution for your everyday web needs.</title>
 		<meta charset="utf-8" />
 		<link href="design/css/main.css" type="text/css" rel="stylesheet">
 
