--- a/home.html
+++ b/home.html
@@ -79,7 +79,8 @@
 		</header>
 		
 		<!-- Main
-		Problème : je n'arrive pas à "arrêter" la page comme demandé. -->
+		Problème : j'ai fini par réussir à limiter la hauteur de la page comme prévu, en limitant mieux la hauteur des article.
+		En revanche, j'ai fait apparaître une marge en bas que je n'arrive pas à supprimer.-->
 		
 		<div id="main">
 		
