--- a/home.html
+++ b/home.html
@@ -80,7 +80,7 @@
 		
 		<!-- Main
 		Problème : j'ai fini par réussir à limiter la hauteur de la page comme prévu, en limitant mieux la hauteur des article.
-		En revanche, j'ai fait apparaître une marge en bas que je n'arrive pas à supprimer.-->
+		J'ai fait disparaître une marge en bas en rajoutant un padding à la section, mais c'est un peu sale.-->
 		
 		<div id="main">
 		
