--- a/home.html
+++ b/home.html
@@ -79,7 +79,7 @@
 		</header>
 		
 		<!-- Main
-		Problème : j'ai fini par réussir à limiter la hauteur de la page comme prévu, en limitant mieux la hauteur des article.
+		Problème : j'ai fini par réussir à limiter la hauteur de la page comme prévu, en limitant mieux la hauteur des articles.
 		J'ai fait disparaître une marge en bas en rajoutant un padding à la section, mais c'est un peu sale.-->
 		
 		<div id="main">
