--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <!--
 		Challenge HTML du 24 mai 2017
 		Autrice : Roxane
-		Problèmes rencontrés détaillées en commentaire des parties : Header, Main, et Articles.
+		Problèmes rencontrés détaillées en commentaire des parties Header et Main.
 -->
 
 <html>
@@ -20,9 +20,9 @@
 	<body>
 	
 		<!-- Header : menu principal, bannière, menu client, barre sociale.
-		Problème : "resserrer" les éléments des menus.
 		J'ai réussi à rapprocher la bannière du menu principal et à globalement respecter les dimensions de la maquette, mais en bidouillant.
-		Je pense qu'il y a plus "propre" comme méthode. -->
+		Je pense qu'il y a plus "propre" comme méthode.
+		Idem pour centrer les menus. Des paddings et margin au px près...-->
 		
 		
 		<header id="header">
@@ -92,9 +92,6 @@
 				Nullam ex magna, rhoncus vel volutpat at, feugiat vel nisi. Vestibulum lobortis ex nunc, ac commodo augue malesuada vel.</strong></p>
 			
 			</div>
-		
-			<!-- Articles
-			Problème : les paragraphes ne s'alignent pas sur les titres. -->
 		
 			<section id="products">
 			
