--- a/home.html
+++ b/home.html
@@ -54,7 +54,7 @@
 			
 			<!-- Types clients -->
 			
-			<span id="clients"> Personal · Business · Organisation</span>
+			<span id="clients"> Personal &bull; Business &bull; Organisation</span>
 		
 			<!-- Barre sociale -->
 			
